// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ALL command can do it following the dependency tree 1`] = `
Array [
  Array [
    "ls",
    Object {
      "bareLogs": undefined,
      "cwd": "test/fixtures/packages3/oao-b",
      "storySrc": "oao-b",
    },
  ],
  Array [
    "ls",
    Object {
      "bareLogs": undefined,
      "cwd": "test/fixtures/packages3/oao",
      "storySrc": "oao",
    },
  ],
  Array [
    "ls",
    Object {
      "bareLogs": undefined,
      "cwd": "test/fixtures/packages3/oao-c",
      "storySrc": "oao-c",
    },
  ],
  Array [
    "ls",
    Object {
      "bareLogs": undefined,
      "cwd": "test/fixtures/packages3/oao-d",
      "storySrc": "oao-d",
    },
  ],
  Array [
    "ls",
    Object {
      "bareLogs": undefined,
      "cwd": "test/fixtures/packages3/oao-priv",
      "storySrc": "oao-priv",
    },
  ],
]
`;

exports[`ALL command executes the specified command on all sub-packages 1`] = `
Array [
  Array [
    "ls",
    Object {
      "bareLogs": undefined,
      "cwd": "test/fixtures/packages/oao",
      "storySrc": "oao",
    },
  ],
  Array [
    "ls",
    Object {
      "bareLogs": undefined,
      "cwd": "test/fixtures/packages/oao-b",
      "storySrc": "oao-b",
    },
  ],
  Array [
    "ls",
    Object {
      "bareLogs": undefined,
      "cwd": "test/fixtures/packages/oao-c",
      "storySrc": "oao-c",
    },
  ],
  Array [
    "ls",
    Object {
      "bareLogs": undefined,
      "cwd": "test/fixtures/packages/oao-d",
      "storySrc": "oao-d",
    },
  ],
  Array [
    "ls",
    Object {
      "bareLogs": undefined,
      "cwd": "test/fixtures/packages/oao-priv",
      "storySrc": "oao-priv",
    },
  ],
]
`;
